<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scVpp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@null"
    android:textAlignment="center">

    <LinearLayout
        android:id="@+id/lyVertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textAlignment="center"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="@string/text_view_register_account_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imView"
            android:layout_marginTop="32dp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@null" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            app:startIconDrawable="@drawable/ic_person"
            app:helperText="@string/activity_register_account_help_obligatorio">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/activity_register_account_help_names" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            app:startIconDrawable="@drawable/ic_email"
            app:helperText="@string/activity_register_account_help_obligatorio">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/activity_register_account_help_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_password"
            app:helperText="@string/activity_register_account_help_obligatorio">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/activity_register_account_help_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/tilRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_password"
            app:helperText="@string/activity_register_account_help_obligatorio">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/activity_register_account_help_repeat_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/activity_register_account_text_view_gender" />

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/activity_register_account_radio_button_female" />

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_register_account_radio_button_male" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/activity_register_account_text_view_hobbies" />

        <LinearLayout
            android:id="@+id/lyHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbDance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_register_account_check_box_dance" />

            <CheckBox
                android:id="@+id/cbCycling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_register_account_check_box_cycling" />

            <CheckBox
                android:id="@+id/cbCinema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_register_account_check_box_cinema" />

            <CheckBox
                android:id="@+id/cbTravel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_register_account_check_box_travel" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/tilDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:startIconDrawable="@drawable/ic_calendar"
            app:helperText="@string/activity_register_account_help_obligatorio">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:hint="@string/activity_register_account_help_date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPlace"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            app:startIconDrawable="@drawable/ic_place"
            app:helperText="@string/activity_register_account_help_obligatorio">

            <AutoCompleteTextView
                android:id="@+id/actvPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_register_account_help_place"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            app:cornerRadius="14dp"
            android:text="@string/activity_register_account_button_save" />

        <TextView
            android:id="@+id/tvResponse"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>